chore: update config example

--- a/config.json.example
+++ b/config.json.example
@@ -4,7 +4,8 @@
         "admin": {
             "username": "admin",
             "password": "password"
-        }
+        },
+        "uploadMode": "file"
     },
     "minio": {
         "endpoint": "web.server.com",
